--- a/test.html
+++ b/test.html
@@ -48,7 +48,7 @@ function setCookie(){
 	var kigendate = nowdate.toGMTString(); //GMTŒ`®‚É•ÏŠ·‚µ‚Ä•Ï”kigendate‚ÉŠi”[
 	var cookievalue = "isOpen=true; ";
 	var expires = "expires=" + kigendate + "; ";
-
+	var path = location.pathname + location.search;
 	document.cookie = cookievalue + expires + path;
 	alert(document.cookie);
 }
@@ -68,7 +68,7 @@ if(document.cookie != '' ){
 }else{
 	    console.log('arr is 0');
 	    alert('test');
-//	    setCookie();
+	    setCookie();
 	    
 }
 console.log('end');
