--- a/test.html
+++ b/test.html
@@ -48,8 +48,8 @@ function setCookie(){
 	var kigendate = nowdate.toGMTString(); //GMTŒ`®‚É•ÏŠ·‚µ‚Ä•Ï”kigendate‚ÉŠi”[
 	var cookievalue = "isOpen=true; ";
 	var expires = "expires=" + kigendate + "; ";
-	var path = "path=/" + location.pathname + location.search;
-	console.log("path" + path);
+	var path = "path=" + location.pathname + location.search;
+	console.log("path  " + path);
 	document.cookie = cookievalue + expires + path;
 	alert(document.cookie);
 }
