--- a/test.html
+++ b/test.html
@@ -52,7 +52,7 @@ function setCookie(){
 	var secure = "secure=ture";
 	
 	console.log("path  " + path);
-	document.cookie = cookievalue + expires + path + secure;
+	document.cookie = cookievalue + expires + path;
 	alert(document.cookie);
 }
 
