--- a/test.html
+++ b/test.html
@@ -52,7 +52,7 @@ function setCookie(){
 	
 	console.log("pathaaaa  " + path);
 //	document.cookie = cookievalue + expires + path;
-	document.cookie = cookievalue;
+	document.cookie = cookievalue + expires ;
 	console.log('setCookie end');
 }
 
