--- a/test.html
+++ b/test.html
@@ -1,13 +1,13 @@
 <script>
-if ('serviceWorker' in navigator) {
-    console.log('Found serviceWorker');
-    navigator.serviceWorker.register('/sw.js')
-        .then((reg) => {
-            console.log('Service Worker Registered', reg);
-        });
-} else {
-    console.log('Not Found serviceWorker');
-}
+//if ('serviceWorker' in navigator) {
+//    console.log('Found serviceWorker');
+//    navigator.serviceWorker.register('/sw.js')
+//        .then((reg) => {
+//            console.log('Service Worker Registered', reg);
+//        });
+//} else {
+//    console.log('Not Found serviceWorker');
+//}
 
 
 var url = location.href ;
@@ -78,3 +78,5 @@ console.log('end');
 testtesttest
 2222 2222
 3333 3333
+<br>
+aaaa
