--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
 		// var kigendate = nowdate.toGMTString();
 		// var expires = "expires=" + kigendate + "; ";
 
-		var cookievalue = "isOpen=true; ";
+		var cookievalue = "{id=1, isOpen=true}{id=2, isOpen=true}; ";
 		// var uri = location.pathname + location.search;
 		// var path = "path=" + encodeURI(uri);
 		
